--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "GPL-3.0-or-later",
     "require": {
         "neos/neos": "^7.3 || ^8.0",
-        "ext-mbstring": "*"
+        "ext-mbstring": "*",
+        "carbon/notification": "^2.4"
     },
     "authors": [
         {
